--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>Hello World Angular!!</h1>
-<h2>Testando H2</h2>
+<h2>Testando H2!</h2>
 <app-first-component></app-first-component>
 <app-list-component></app-list-component>
